syntax = "proto3";

package pb;

option go_package = "../pb";

//-----------------
// Shared datatypes
//-----------------

message Timestamp {
  // Represents seconds of UTC time since Unix epoch
  // 1970-01-01T00:00:00Z. Must be from from 0001-01-01T00:00:00Z to
  // 9999-12-31T23:59:59Z inclusive.
  int64 seconds = 1;
  // Non-negative fractions of a second at nanosecond resolution. Negative
  // second values with fractions must still have non-negative nanos values
  // that count forward in time. Must be from 0 to 999,999,999
  // inclusive.
  int64 nanos = 2;
}

message Duration {
  int64 nanos = 1;
}

// Empty is only used as a message for rpc calls that
// return no data.
message Empty {
}

// An optional string value used for RPCs that update a record.
// If the Optional is undefined, the updating code will not change
// the field.
message OptString {
  string val = 1; //should be private, but conflicts with field tags
}

message OptInt64 {
  int64 val = 1;
}

message OptBool {
  bool val = 1;
}

message IPNet {
  bytes ip = 1;
  bytes mask = 2;
}

message ID {
  string id = 1;
}
